# PSR-SRS-MVP

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-lock.txt
configs/: bm25.json  fusion.json  personalization.json  sample.json  semantic.json
data/sample/: events.csv  items.csv  qrels.csv  queries.csv  users.csv
docs/: architecture.md  bm25_baseline.md  data_generation.md  hybrid_retrieval.md  license_decision.md  notebook_walkthrough.md  personalized_reranking.md  release_checklist.md  reproducibility.md  semantic_baseline.md  synthetic_data_design.md
docs/releases/: v0.1.0.md
notebooks/: 01_mvp_end_to_end.ipynb
outputs/bm25/: metrics.json  query_metrics.csv  search_results.csv
outputs/comparison/: bm25_vs_semantic.json  hybrid_vs_personalized.json  retrieval_methods.json
outputs/data_generation/: data_quality_report.json  reproducibility_report.json
outputs/hybrid/: diagnostics.json
outputs/hybrid/linear/: metrics.json  query_metrics.csv  search_results.csv
outputs/notebook/: 01_mvp_end_to_end.executed.ipynb  01_mvp_end_to_end.recomputed.ipynb  notebook_execution_report.json
outputs/personalization/: diagnostics.json  metrics.json  request_metrics.csv  search_results.csv  user_profiles.csv
outputs/semantic/: metrics.json  query_metrics.csv  search_results.csv
scripts/: build_notebook.py  generate_data.py  release_check.py  reproducibility_check.py  run_bm25.py  run_fusion.py  run_personalization.py  run_semantic.py  validate_data.py  validate_notebook.py
src/psr_srs_mvp/: __init__.py
tests/: __init__.py  test_bm25.py  test_data_generation.py  test_fusion.py  test_personalization.py  test_semantic.py
(+23 files in other folders)
